# AutoShowTracker

./: .env.example  .gitignore  02_ARCHITECTURE.md  03_MEDIA_DETECTION.md  06_BROWSER_EXTENSION.md  09_LICENSING_AND_DISTRIBUTION.md  CLAUDE.md  LICENSE  PRIVACY_POLICY.md  README.md  THIRD_PARTY_LICENSES.txt  alembic.ini  pyproject.toml  show_tracker.spec
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
browser_extension/chrome/: background.js  content.js  manifest.json  popup.css  popup.js
browser_extension/firefox/: background.js  content.js  manifest.json  popup.css  popup.html  popup.js
config/: default_settings.json
contrib/: show-tracker.service
docs/: ACTIVITYWATCH.md  API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_DECISIONS.md  DECISIONS.md  DISTRIBUTION.md  FEATURES.md  HUMAN_TODO.md  INDEX.md  SETUP.md  SETUP_AND_USAGE.md  TODO.md
docs/design/: 00_CLAUDE_CODE_ENTRY_POINT.md  01_PROJECT_OVERVIEW.md  04_CONTENT_IDENTIFICATION.md  05_ACTIVITYWATCH_INTEGRATION.md  07_DATA_MODEL.md  08_IMPLEMENTATION_ROADMAP.md
profiles/: default_profiles.json
scripts/: auto_setup.py  build_appimage.sh  bump_version.sh  inno_setup.iss  load_test.py  ocr_benchmark.py  package_extensions.sh
src/show_tracker/: __init__.py  config.py  first_run.py  main.py  notifications.py  tray.py
src/show_tracker/api/: __init__.py  app.py  routes_export.py  routes_history.py  routes_media.py  routes_movies.py  routes_settings.py  routes_stats.py  routes_sync.py  routes_unresolved.py  routes_webhooks.py  routes_youtube.py  schemas.py
src/show_tracker/detection/: __init__.py  activitywatch.py  browser_handler.py  detection_service.py  macos_listener.py  media_session.py  mpris_listener.py  smtc_listener.py
src/show_tracker/identification/: __init__.py  confidence.py  parser.py  resolver.py  tmdb_client.py  tvdb_client.py  url_patterns.py  youtube_client.py
src/show_tracker/ocr/: __init__.py  engine.py  ocr_service.py  region_crop.py  screenshot.py
src/show_tracker/players/: __init__.py  file_inspector.py  mpv.py  player_service.py  vlc.py
src/show_tracker/storage/: __init__.py  database.py  models.py  repository.py
src/show_tracker/sync/: __init__.py  simkl.py  trakt.py
src/show_tracker/utils/: __init__.py  aliases.py  logging.py
tests/data/ocr_screenshots/: manifest.json
tests/e2e/: test_browser_extension.py
tests/integration/: test_activitywatch.py  test_identification_pipeline.py
tests/unit/: test_api.py  test_cli.py  test_confidence.py  test_config.py  test_detection_service.py  test_detection_sources.py  test_ocr.py  test_parser.py  test_platform_listeners.py  test_players.py  test_resolver.py  test_simkl.py  test_storage.py  test_sync.py  test_url_patterns.py
web_ui/static/css/: style.css
web_ui/static/js/: app.js
web_ui/templates/: index.html
